--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.33.1",
-    "astro": "^5.6.2",
+    "@astrojs/starlight": "0.34.0",
+    "astro": "^5.7.2",
     "sharp": "^0.32.6"
   },
   "repository": {
